--- a/public/login.html
+++ b/public/login.html
@@ -56,7 +56,7 @@
     </div>
 
     <div id="div_aguardar" class="loading-div">
-        <img src="./assets/circle-loading.gif" id="loading-gif">
+        <img src="./assets/circle-loading" id="loading-gif">
     </div>
 </body>
 </html>
