--- a/public/login.html
+++ b/public/login.html
@@ -48,9 +48,12 @@
 
     <div class="formulario">
         <h2>Login</h2>
-        <input id="email_usuario" type="text" placeholder="E-mail">
-        <input id="senha_usuario" type="password" placeholder="Senha">
-        <br>
+        <div>
+            <span>E-mail:</span>
+            <input id="email_usuario" type="text" placeholder="exemplo@teste.com">
+            <span>Senha:</span>
+            <input id="senha_usuario" type="password">
+        </div>        
         <button onclick="entrar()">Entrar</button>
         <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
     </div>
