Adição de favicon e gifs

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/personagens.css">
     <link rel="stylesheet" href="css/planetas.css">
     <link rel="stylesheet" href="css/adaptacoes.css">
+<link rel="shortcut icon" href="./assets/dune-ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/footer.css">
     <title>Home</title>
 </head>
@@ -355,7 +356,7 @@
     })
 
     document.getElementById('duna_2021').addEventListener("mouseover", () => {
-        duna_2021.src = './assets/planeta1.png';
+        duna_2021.src = './assets/2021.gif';
     })
 
     document.getElementById('duna_2021').addEventListener("mouseout", () => {
@@ -363,7 +364,7 @@
     })
 
     document.getElementById('duna_2024').addEventListener("mouseover", () => {
-        duna_2024.src = './assets/planeta1.png';
+        duna_2024.src = './assets/2024.gif';
     })
 
     document.getElementById('duna_2024').addEventListener("mouseout", () => {
