Inserção de efeito sonoro no jogo

--- a/public/jogo-cobra/jogo.html
+++ b/public/jogo-cobra/jogo.html
@@ -18,6 +18,10 @@
       </div>
       
       <div class="jogo"></div>
+
+      <audio controls class="audio" style="opacity: 0%;">
+        <source src="../assets/audio/Dune scream song meme (mp3cut.net).mp3" type="audio/mpeg">
+      </audio>
       
     </div>
 
