Tela inicial para o jogo

--- a/public/jogo-cobra/jogo.html
+++ b/public/jogo-cobra/jogo.html
@@ -9,9 +9,9 @@
     <script src="../js/jogo.js" defer></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container"> 
       <h1>Shai Hulud's Game</h1>
-
+  
       <div class="pontuacao-jogo">
         <span class="pontos">Pontos: 0</span>
         <span class="recorde">Recorde: 0</span>
@@ -20,7 +20,7 @@
       <div class="jogo"></div>
 
       <audio controls class="audio" style="opacity: 0%;">
-        <source src="../assets/audio/Dune scream song meme (mp3cut.net).mp3" type="audio/mpeg">
+        <source src="../assets/audio/Dune scream song meme - 5 segundos e acelerado.mp3" type="audio/mpeg">
       </audio>
       
     </div>
