Criação de novas funções para o banco

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -9,5 +9,6 @@
 <body>
     <h2>Dashboard</h2>
     <a href="../index.html">Voltar</a>
+    <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
 </body>
 </html>
