--- a/public/jogo-cobra/jogo.html
+++ b/public/jogo-cobra/jogo.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container"> 
+      <div onclick="location.href='tela_inicial.html'"><img class="sair" src="exit_icon.png" alt=""></div>
       <h1>Shai Hulud's Game</h1>
   
       <div class="pontuacao-jogo">
