--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/cadastro.css">
-  <script src=".js/cadastro.js"></script>
-  <script src="./js/sessao.js"></script>
+  <script src="js/cadastro.js"></script>
+  <script src="js/sessao.js"></script>
   <title>Cadastro</title>
 </head>
 
