--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -1,14 +1,157 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/index.css">
     <title>Dashboard</title>
 </head>
+
+<style>
+    body {
+        margin: 0;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    .navbar-dashboard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 20%;
+        background-color: var(--dourado);
+    }
+
+    .conteudo {
+        display: flex;
+        flex-direction: column;
+        margin-left: 20%;
+        text-align: center;
+        color: wheat;
+    }
+
+    .titulo {
+        font-family: 'Dune Rise';
+    }
+
+    .metricas {
+        display: flex;
+        flex-direction: row;
+        gap: 50px;
+    }
+
+    .metricas div {
+        border: 1px solid white;
+    }
+
+    #quant_usuarios {}
+
+    #recorde_usuarios {
+        text-align: left;
+    }
+</style>
+
 <body>
-    <h2>Dashboard</h2>
-    <a href="../index.html">Voltar</a>
-    <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
+    <div class="navbar-dashboard">
+        <p>Olá <b id="nome_usuario"></b>, seja bem vindo!</p>
+
+        <a href="../index.html">Voltar</a>
+        <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
+    </div>
+
+    <div class="conteudo">
+        <h2 class="titulo">Metricas do WebSite</h2>
+
+        <div class="metricas">
+            <div id="quant_usuarios">
+            </div>
+
+            <div id="partidas_jogadas">
+            </div>
+
+            <div>
+                <b>Placar de Jogadores</b>
+                <ul id="recorde_usuarios">
+                </ul>
+            </div>
+        </div>
+
+
+    </div>
 </body>
+
 </html>
+
+<script>
+    var nome_usuario = document.getElementById('nome_usuario');
+    nome_usuario.innerText = sessionStorage.NOME_USUARIO;
+
+    const quant_usuarios = document.getElementById('quant_usuarios');
+    const recorde_usuarios = document.getElementById('recorde_usuarios');
+    const partidas_jogadas = document.getElementById('partidas_jogadas');
+
+    async function obterQuantUsuarios() {
+        const resposta = await fetch("http://localhost:3333/dashboardRoutes/quantUsuarios");
+
+        if (resposta.ok) {
+            console.log('QuanUsuarios deu certo!');
+            const dados = await resposta.json();
+            console.log(dados)
+
+            const totalUsuarios = dados[0]["COUNT(*)"];
+            quant_usuarios.innerHTML = `Quantidade de usuários cadastrados: <br> ${totalUsuarios}`;
+        } else {
+            console.log("Erro na requisição", resposta.status);
+        }
+    }
+
+    async function obterPartidasJogadas() {
+        const resposta = await fetch("http://localhost:3333/dashboardRoutes/partidasJogadas");
+
+        if (resposta.ok) {
+            console.log('PartidasJogadas deu certo!');
+            const dados = await resposta.json();
+            console.log(dados)
+
+            const totalUsuarios = dados[0]["COUNT (*)"];
+            partidas_jogadas.innerHTML = `Quantidade de Partidas Jogadas: <br> ${totalUsuarios}`;
+        } else {
+            console.log("Erro na requisição", resposta.status);
+        }
+    }
+
+
+    async function obterPlacarUsuarios() {
+        const resposta = await fetch("http://localhost:3333/dashboardRoutes/placarUsuarios");
+
+        if (resposta.ok) {
+            console.log('PlacarUsuarios funcionou!');
+            const dados = await resposta.json();
+            console.log(dados)
+
+            dados.forEach(function (item) {
+                const data = new Date(item.data);
+                const dataFormatada = data.toLocaleDateString('pt-BR');
+                const horaFormatada = data.toLocaleTimeString('pt-BR', {
+                    hour: '2-digit',
+                    minute: '2-digit'
+                });
+
+                recorde_usuarios.innerHTML += `<li>Nome: ${item.nome}  |  Recorde: ${item.pontuacao}  |  ${dataFormatada} - ${horaFormatada}</li> <br>`;
+            });
+
+        } else {
+            console.log("Erro na requisição", resposta.status);
+        }
+    }
+
+
+    obterQuantUsuarios();
+    obterPlacarUsuarios();
+    obterPartidasJogadas();
+
+</script>
