--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -22,7 +22,7 @@
         top: 0;
         left: 0;
         height: 100%;
-        width: 20%;
+        width: 18%;
         background-color: var(--dourado);
     }
 
@@ -46,12 +46,21 @@
 
     .metricas div {
         border: 1px solid white;
+        border-radius: 20px;
+        margin-left: 20px;
     }
 
-    #quant_usuarios {}
+    #quant_usuarios {
+        padding: 10px 10px 10px 10px;
+    }
 
-    #recorde_usuarios {
-        text-align: left;
+    #partidas_jogadas {
+        padding: 10px 10px 10px 10px;
+    }
+
+    #top_jogadores {
+        padding: 10px 10px 10px 10px;
+        list-style-type: none;
     }
 </style>
 
@@ -61,6 +70,7 @@
 
         <a href="../index.html">Voltar</a>
         <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
+        <a href="quiz.html">Quiz</a>
     </div>
 
     <div class="conteudo">
@@ -73,10 +83,8 @@
             <div id="partidas_jogadas">
             </div>
 
-            <div>
-                <b>Placar de Jogadores</b>
-                <ul id="recorde_usuarios">
-                </ul>
+            <div id="top_jogadores">
+                <p>Top jogadores com mais partidas:</p>
             </div>
         </div>
 
@@ -91,8 +99,8 @@
     nome_usuario.innerText = sessionStorage.NOME_USUARIO;
 
     const quant_usuarios = document.getElementById('quant_usuarios');
-    const recorde_usuarios = document.getElementById('recorde_usuarios');
     const partidas_jogadas = document.getElementById('partidas_jogadas');
+    const top_jogadores = document.getElementById('top_jogadores');
 
     async function obterQuantUsuarios() {
         const resposta = await fetch("http://localhost:3333/dashboardRoutes/quantUsuarios");
@@ -103,7 +111,7 @@
             console.log(dados)
 
             const totalUsuarios = dados[0]["COUNT(*)"];
-            quant_usuarios.innerHTML = `Quantidade de usuários cadastrados: <br> ${totalUsuarios}`;
+            quant_usuarios.innerHTML = `Quantidade de usuários cadastrados: <br><br> ${totalUsuarios}`;
         } else {
             console.log("Erro na requisição", resposta.status);
         }
@@ -117,31 +125,24 @@
             const dados = await resposta.json();
             console.log(dados)
 
-            const totalUsuarios = dados[0]["COUNT (*)"];
-            partidas_jogadas.innerHTML = `Quantidade de Partidas Jogadas: <br> ${totalUsuarios}`;
+            const totalUsuarios = dados[0]["COUNT(*)"];
+            partidas_jogadas.innerHTML = `Quantidade de Partidas Jogadas: <br><br> ${totalUsuarios}`;
         } else {
             console.log("Erro na requisição", resposta.status);
         }
     }
 
 
-    async function obterPlacarUsuarios() {
-        const resposta = await fetch("http://localhost:3333/dashboardRoutes/placarUsuarios");
+    async function obtertopJogadores() {
+        const resposta = await fetch("http://localhost:3333/dashboardRoutes/topJogadores");
 
         if (resposta.ok) {
-            console.log('PlacarUsuarios funcionou!');
+            console.log('topJogadores funcionou!');
             const dados = await resposta.json();
             console.log(dados)
 
             dados.forEach(function (item) {
-                const data = new Date(item.data);
-                const dataFormatada = data.toLocaleDateString('pt-BR');
-                const horaFormatada = data.toLocaleTimeString('pt-BR', {
-                    hour: '2-digit',
-                    minute: '2-digit'
-                });
-
-                recorde_usuarios.innerHTML += `<li>Nome: ${item.nome}  |  Recorde: ${item.pontuacao}  |  ${dataFormatada} - ${horaFormatada}</li> <br>`;
+                top_jogadores.innerHTML += `<li>Nome: ${item.nome}  - Partidas: ${item.partidas}</li> <br>`;
             });
 
         } else {
@@ -149,9 +150,12 @@
         }
     }
 
+    function executarFuncoes() {
+        obterQuantUsuarios();
+        obtertopJogadores();
+        obterPartidasJogadas();
+    }
 
-    obterQuantUsuarios();
-    obterPlacarUsuarios();
-    obterPartidasJogadas();
+    executarFuncoes()
 
 </script>
