--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/navbar.css">
   <link rel="stylesheet" href="css/index.css">
   <link rel="stylesheet" href="css/cadastro.css">
+  <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
   <script src="js/cadastro.js"></script>
   <script src="js/sessao.js"></script>
   <title>Cadastro</title>
