--- a/public/jogo-cobra/tela_inicial.html
+++ b/public/jogo-cobra/tela_inicial.html
@@ -5,57 +5,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/tela_inicial_jogo.css">
+  <link rel="stylesheet" href="../css/dashboard.css">
   <title>Shai Hulud's Game</title>
 </head>
 
 <style>
-  .placar-jogadores {
-    display: none;
-    text-align: center;
-    align-items: center;
-    position: absolute;
-    width: 100vmin;
-    height: 80vmin;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    margin: auto;
-    background-color: rgba(0, 0, 0, 0.9);
-    z-index: 1;
-    font-family: "Dune Rise";
-    color: white;
-  }
 
-  .placar-jogadores .titulo {
-    color: #EFA608;
-  }
-
-  #recorde_usuarios {
-    list-style-type: none;
-    font-size: 20px;
-    text-align: left;
-    margin-left: 130px;
-  }
-
-  .close {
-    color: #EFA608;
-    float: right;
-    font-size: 50px;
-    font-weight: bold;
-    cursor: pointer;
-    margin-right: 10px;
-  }
 </style>
 
 <body>
+  <div class="navbar-dashboard">
+    <p>Olá <b id="nome_usuario"></b>, seja bem vindo(a)!</p>
+
+    <a href="../dashboard/dashboard.html">Métricas</a>
+    <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
+    <a href="../dashboard/quiz.html">Quiz</a>
+    <a href="../index.html" class="voltar"><img src="../jogo-cobra/exit_icon.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
+  </div>
   <div class="tela_inicial" id="tela_inicial">
     <div class="container-titulo">
       <h1 class="titulo">Shai Hulud's Game</h1>
-      <div onclick="location.href='http://localhost:3333/dashboard/dashboard.html'"><img class="sair"
-          src="exit_icon.png" alt=""></div>
+      <div onclick="location.href='../dashboard/dashboard.html'"><img class="sair" src="exit_icon.png" alt=""></div>
     </div>
-
     <div class="container-botoes">
       <button class="iniciar" onclick="location.href='jogo.html'">Iniciar</button>
       <button class="placar" onclick="exibirPlacar()">Placar</button>
@@ -78,6 +49,9 @@
 </html>
 
 <script>
+  var nome_usuario = document.getElementById('nome_usuario');
+  nome_usuario.innerText = sessionStorage.NOME_USUARIO;
+  
   const recorde_usuarios = document.getElementById('recorde_usuarios');
   const placar_jogadores = document.getElementById('placar-jogadores');
 
