--- a/public/login.html
+++ b/public/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/cadastro.css">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
     <script src="./js/login.js"></script>
     <script src="./js/sessao.js"></script>
     <title>Login</title>
 </head>
+
 <body>
     <div class="header">
         <div class="logo">
@@ -54,13 +57,14 @@
             <input id="email_usuario" type="text" placeholder="exemplo@teste.com">
             <span>Senha:</span>
             <input id="senha_usuario" type="password">
-        </div>        
+        </div>
         <button onclick="entrar()">Entrar</button>
         <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se</a></p>
     </div>
 
     <div id="div_aguardar" class="loading-div">
-        
+
     </div>
 </body>
+
 </html>
