--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -17,7 +17,7 @@
     <a href="../dashboard/dashboard.html">Métricas</a>
     <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
     <a href="quiz.html">Quiz</a>
-    <a href="../index.html" class="voltar"><img src="../jogo-cobra/exit_icon.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
+    <a href="../index.html" class="voltar"><img src="../jogo-cobra/saida icone.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
   </div>
 
   <div class="quiz-container">
