--- a/public/jogo-cobra/jogo.html
+++ b/public/jogo-cobra/jogo.html
@@ -7,6 +7,7 @@
   <title>Shai Hulud's Game</title>
   <link rel="stylesheet" href="../css/jogo.css">
   <link rel="stylesheet" href="../css/dashboard.css">
+  <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="../js/jogo.js" defer></script>
 </head>
@@ -18,11 +19,12 @@
     <a href="../dashboard/dashboard.html">Métricas</a>
     <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
     <a href="../dashboard/quiz.html">Quiz</a>
-    <a href="../index.html" class="voltar"><img src="../jogo-cobra/exit_icon.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
+    <a href="../index.html" class="voltar"><img src="../jogo-cobra/saida icone.png"
+        style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
   </div>
   <div class="container">
-    <div onclick="location.href='tela_inicial.html'"><img class="sair" src="exit_icon.png" alt=""></div>
-    <h1>Shai Hulud's Game</h1>
+    <div onclick="location.href='tela_inicial.html'"><img class="sair" src="saida icone.png" alt=""></div>
+    <h1 class="titulo"></h1>
 
     <div class="pontuacao-jogo">
       <span class="pontos">Pontos: 0</span>
