--- a/public/jogo-cobra/tela_inicial.html
+++ b/public/jogo-cobra/tela_inicial.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/tela_inicial_jogo.css">
   <link rel="stylesheet" href="../css/dashboard.css">
+  <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
   <title>Shai Hulud's Game</title>
 </head>
 
@@ -20,12 +21,12 @@
     <a href="../dashboard/dashboard.html">Métricas</a>
     <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
     <a href="../dashboard/quiz.html">Quiz</a>
-    <a href="../index.html" class="voltar"><img src="../jogo-cobra/exit_icon.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
+    <a href="../index.html" class="voltar"><img src="../jogo-cobra/saida icone.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
   </div>
   <div class="tela_inicial" id="tela_inicial">
+    <div onclick="location.href='../dashboard/dashboard.html'"><img class="sair" src="saida icone.png" alt=""></div>
     <div class="container-titulo">
       <h1 class="titulo">Shai Hulud's Game</h1>
-      <div onclick="location.href='../dashboard/dashboard.html'"><img class="sair" src="exit_icon.png" alt=""></div>
     </div>
     <div class="container-botoes">
       <button class="iniciar" onclick="location.href='jogo.html'">Iniciar</button>
