Alteração do login e do cadastro

--- a/public/dashboard/quiz.html
+++ b/public/dashboard/quiz.html
@@ -14,7 +14,7 @@
   <div class="navbar-dashboard">
     <p>Olá <b id="nome_usuario"></b>, seja bem vindo!</p>
 
-    <a href="../dashboard/dashboard.html">Métricas</a>
+    <a id="metricas" href="../dashboard/dashboard.html">Métricas</a>
     <a href="../jogo-cobra/tela_inicial.html">Jogo</a>
     <a href="quiz.html">Quiz</a>
     <a href="../index.html" class="voltar"><img src="../jogo-cobra/saida icone.png" style="width: 30px; padding-right: 10px;" alt="">Voltar</a>
@@ -31,6 +31,13 @@
 </html>
 
 <script>
+
+  var metricas = document.getElementById('metricas')
+
+  if (!(sessionStorage.EMAIL_USUARIO == 'adm@gmail.com') && !(sessionStorage.NOME_USUARIO == 'ADM')) {
+    metricas.style.display = 'none';
+  }
+  
   var nome_usuario = document.getElementById('nome_usuario');
   nome_usuario.innerText = sessionStorage.NOME_USUARIO;
 
