--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
   <script src="js/cadastro.js"></script>
   <script src="js/sessao.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <title>Cadastro</title>
 </head>
 
