--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/livros.css">
     <link rel="stylesheet" href="css/personagens.css">
+    <link rel="stylesheet" href="css/shai_hulud.css">
     <link rel="stylesheet" href="css/planetas.css">
     <link rel="stylesheet" href="css/adaptacoes.css">
     <link rel="shortcut icon" href="./assets/dune-ico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/sobre_mim.css">
     <link rel="stylesheet" href="css/footer.css">
 
     <script src="js/livros.js"></script>
@@ -87,8 +89,7 @@
         <p>A franquia é composta por mais de 13 livros escritos ao longo das décadas, e os seus principais são:</p>
 
         <div class="container">
-            <button class="botao-esquerdo" onclick="diminuir()">
-                << /button>
+            <button class="botao-esquerdo" onclick="diminuir()"><</button>
 
                     <div class="livro" id="livro">
                         <img src="assets/livro 1.jpg" alt="">
@@ -221,6 +222,16 @@
                 <img src="assets/feyd-rautha.png" alt="">
             </div>
         </div>
+    </div>
+
+    <div class="shai_hulud">
+        <h2>Shai Hulud</h2>
+        <img src="./assets/shai_hulud.jpg" alt="">
+        <p>Os Shaid Huluds, ou "Divindade da Areia" em tradução livre, são uma das figuras mais
+            marcantes dos livros. Vermes gigantes que vivem nos desertos de Arrakis, são responsáveis
+            pela produção da Especiaria durante seu ciclo de vida. São um dos principais perigos do
+            planeta, atacando qualquer um que chamar a atenção enquanto caminha na areia. 
+        </p>
     </div>
 
     <div class="planetas" id="planetas">
@@ -432,8 +443,28 @@
         </div>
     </div>
 
+        <div class="sobre-mim" id="sobre-mim">
+        <h2>Minha historia com a franquia</h2>
+        <div class="container">
+            <div class="texto">
+                <p>Olá, me chamo Kevin Silva Estrela, e meu contato com a franquia começou a cerca de 4 anos, durante a
+                    estreia do primeiro filme em 2021. Inicialmente não tinha muita expectativa, visto que não conhecia
+                    muito bem do que se tratava a história. Porém, quando assisti fiquei simplesmente apaixonado. Descobri
+                    um universo extremamente rico em conteúdo, com personagens cativantes e mensagens muito profundas.
+                    Como sou muito fã de ficção-cientifica foi um prato cheio para mim descobrir essa obra.  
+                </p>
+            </div>
+
+            <div class="quadro">
+                <img src="assets/kevin-foto.jpg" alt="">
+                <p>Kevin Silva Estrela</p>
+            </div>
+        </div>
+    </div>
+
+
     <div class="footer">
-        <p>Feita por Kevin Silva Estrela na São Paulo Tech School - SPTech (2025)</p>
+        <p>Feito por Kevin Silva Estrela na São Paulo Tech School - SPTech (2025)</p>
     </div>
 </body>
 
