--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="../assets/dune-ico.ico" type="image/x-icon">
     <script src="./js/login.js"></script>
     <script src="./js/sessao.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <title>Login</title>
 </head>
 
